# ftdi-mpsse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: libMPSSE_i2c.h
include/linux/: ftd2xx.h
samples/: b.bash  b.bat
samples/I2C/: sample-dynamic.c  sample-static.c
samples/SPI/: sample-dynamic.c  sample-static.c
